feat(media): enhance email system