@@ -114,13 +114,13 @@ public class TemplateServiceImpl implements TemplateService {
         if (criteria.getTypes() != null && !criteria.getTypes().isEmpty()) {
             builder.withIn("type", criteria.getTypes().stream()
                     .map(NotificationChannel::valueOf)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
         if (criteria.getLanguages() != null && !criteria.getLanguages().isEmpty()) {
             builder.withIn("language", criteria.getLanguages().stream()
                     .map(NotificationLanguage::valueOf)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
         builder.withIfPresent("active", SearchOperator.EQUAL, criteria.getActive());
